--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-You will (most likely) need to adjust the GTEST variable in the Makefile
+# Roman Numerals
+
+## Building
+
+Tell make where to find your copy of gtest using something like the code below
+
+	make GTEST_ROOT=../gtest-1.6.0
+
